--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,56 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="64dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     android:layout_margin="0dp"
     tools:context="com.example.csadmin.myapplication.MainActivity"
     android:background="@drawable/background">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:padding="0dp"
-        android:layout_marginTop="-64dp">
-
-        <RelativeLayout
-            android:padding="0dp"
-            android:id="@+id/game"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_margin="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerInParent="true"
+            android:padding="0dp"
+            android:layout_marginTop="-64dp">
 
-            <Button
-                android:text="@string/left"
-                android:layout_width="wrap_content"
+            <ImageButton android:contentDescription="@string/pause"
+                android:id="@+id/pause"
                 android:layout_height="wrap_content"
-                android:id="@+id/left"
-                android:background="#2ACCFF"
-                android:textSize="36sp"
-                android:layout_gravity="start"/>
+                android:layout_width="wrap_content"
+                android:layout_gravity="end"
+                app:srcCompat="@android:drawable/ic_media_pause"
+                android:background="@android:drawable/btn_default" />
 
-            <Button
-                android:text="@string/right"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:padding="0dp"
+                android:id="@+id/game"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/right"
-                android:background="#2ACC66"
-                android:textSize="36sp"
-                android:layout_gravity="end"/>
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:text="@string/left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/left"
+                    android:background="#2ACCFF"
+                    android:textSize="36sp"
+                    android:layout_gravity="start"/>
+
+                <Button
+                    android:text="@string/right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/right"
+                    android:background="#2ACC66"
+                    android:textSize="36sp"
+                    android:layout_gravity="end"/>
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#CC000000"
+        android:visibility="invisible"
+        android:id="@+id/paused">
 
-    </LinearLayout>
+        <ImageButton android:contentDescription="@string/unpause"
+            android:id="@+id/unpause"
+            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@android:drawable/ic_media_play"
+            android:background="@android:drawable/btn_default" />
+
+    </RelativeLayout>
+
+
 </RelativeLayout>
