--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -30,20 +30,25 @@
             android:padding="0dp"
             android:layout_marginTop="-64dp">
 
-            <ImageButton android:contentDescription="@string/pause"
-                android:id="@+id/pause"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_gravity="end"
-                app:srcCompat="@android:drawable/ic_media_pause"
-                android:background="@android:drawable/btn_default" />
-
             <RelativeLayout
-                android:padding="0dp"
-                android:id="@+id/game"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:padding="0dp"
+                    android:id="@+id/game"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <ImageButton android:contentDescription="@string/pause"
+                    android:id="@+id/pause"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    app:srcCompat="@android:drawable/ic_media_pause"
+                    android:background="@android:drawable/btn_default" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -82,8 +87,8 @@
 
         <ImageButton android:contentDescription="@string/unpause"
             android:id="@+id/unpause"
-            android:layout_height="100dp"
-            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             app:srcCompat="@android:drawable/ic_media_play"
