--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -23,35 +23,57 @@
         android:layout_margin="0dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_centerInParent="true"
-            android:padding="0dp"
-            android:layout_marginTop="-64dp">
-
-            <RelativeLayout
+            android:layout_centerHorizontal="true"
+            android:padding="0dp">
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-                <RelativeLayout
-                    android:padding="0dp"
-                    android:id="@+id/game"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <ImageButton android:contentDescription="@string/pause"
-                    android:id="@+id/pause"
-                    android:layout_height="wrap_content"
+                <Button
+                    android:text="@string/left"
                     android:layout_width="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    app:srcCompat="@android:drawable/ic_media_pause"
-                    android:background="@android:drawable/btn_default" />
-            </RelativeLayout>
+                    android:layout_height="match_parent"
+                    android:id="@+id/left2"
+                    android:background="#2ACCFF"
+                    android:textSize="36sp" />
+
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <RelativeLayout
+                        android:padding="0dp"
+                        android:id="@+id/game"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <ImageButton android:contentDescription="@string/pause"
+                        android:id="@+id/pause"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_alignEnd="@+id/game"
+                        android:layout_alignRight="@+id/game"
+                        app:srcCompat="@android:drawable/ic_media_pause"
+                        android:background="@android:drawable/btn_default" />
+
+
+                </RelativeLayout>
+                <Button
+                    android:text="@string/right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/right2"
+                    android:background="#2ACC66"
+                    android:textSize="36sp" />
+            </LinearLayout>
+
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <Button
